--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -30,4 +30,24 @@
         <url-pattern>/deployment_from_xml/*</url-pattern>
     </servlet-mapping>
 
+
+
+    <servlet>
+        <servlet-name>action</servlet-name>
+        <servlet-class>
+            org.apache.struts.action.ActionServlet
+        </servlet-class>
+        <init-param>
+            <param-name>config</param-name>
+            <param-value>/WEB-INF/struts-config.xml</param-value>
+        </init-param>
+        <load-on-startup>2</load-on-startup>
+    </servlet>
+    <!-- Standard Action Servlet Mapping -->
+    <servlet-mapping>
+        <servlet-name>action</servlet-name>
+        <url-pattern>*.do</url-pattern>
+    </servlet-mapping>
+
+
 </web-app>
